--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   fluttertoast: ^8.0.9
   intl: ^0.17.0
   flutter_credit_card: ^3.0.1
+  file_picker: ^4.6.1
+  firebase_storage: ^10.2.18
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
