--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_credit_card: ^3.0.1
   file_picker: ^4.6.1
   firebase_storage: ^10.2.18
+  flutter_native_image: ^0.0.6+1
+  flutter_spinkit: ^5.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
