--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage: ^10.2.18
   flutter_native_image: ^0.0.6+1
   flutter_spinkit: ^5.1.0
+  table_calendar: ^3.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
