--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,9 +91,29 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: CormorantSCSemiBold
+    - family: CormorantGaramond_semiBold
       fonts:
-        - asset: assets/fonts/CormorantSC-SemiBold.ttf
+        - asset: assets/fonts/CormorantGaramond-SemiBold.ttf
+
+    - family: CormorantGaramond_Bold
+      fonts:
+        - asset: assets/fonts/CormorantGaramond-Bold.ttf
+
+    - family: CormorantGaramond_light
+      fonts:
+          - asset: assets/fonts/CormorantGaramond-Light.ttf
+
+    - family: CormorantGaramond_medium
+      fonts:
+          - asset: assets/fonts/CormorantGaramond-Medium.ttf
+
+    - family: CormorantGaramond_italic
+      fonts:
+        - asset: assets/fonts/CormorantGaramond-Italic.ttf
+
+    - family: CormorantGaramond_regular
+      fonts:
+          - asset: assets/fonts/CormorantGaramond-Regular.ttf
 
 
   #       - asset: fonts/Schyler-Regular.ttf
