--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,10 @@ dependencies:
     sdk: flutter
   provider: ^6.0.3
   get: ^4.6.5
-  get_it: ^7.2.0
   firebase_core: ^1.18.0
   firebase_auth: ^3.3.6
   cloud_firestore: ^3.1.18
-  encrypt: ^5.0.1
+  #encrypt: ^5.0.1
   shared_preferences: ^2.0.15
   fluttertoast: ^8.0.9
   intl: ^0.17.0
@@ -44,14 +43,17 @@ dependencies:
   firebase_storage: ^10.2.18
   flutter_native_image: ^0.0.6+1
   flutter_spinkit: ^5.1.0
-  table_calendar: ^3.0.6
+  #table_calendar: ^3.0.6
   dropdown_button2: ^1.6.3
   time_range: ^1.0.3
   pdf: ^3.8.1
   syncfusion_flutter_pdfviewer: ^20.2.39-beta
-  shimmer: ^2.0.0
+  #shimmer: ^2.0.0
   path_provider: ^2.0.11
-  open_file: ^3.2.1
+#  open_file: ^3.2.1
+  flutter_email_sender: ^5.1.0
+  dio: ^4.0.6
+  permission_handler: ^10.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
